--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,8 @@
 name: CI/CD
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build-and-push-image:
     name: Build and Push Docker images
@@ -12,39 +10,42 @@ jobs:
     permissions:
       contents: read
       packages: write
-
     outputs:
-      image: ${{ steps.push-image.outputs.image }}
-    
+      image: ${{ steps.image-output.outputs.image }}
+   
     steps:
       - name: Checkout
         uses: actions/checkout@v3
  
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      
+     
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      
+     
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
+      
       # GHCR requires lowercase.
       - id: repolower
         uses: ASzc/change-string-case-action@v5
         with:
           string: ${{ github.repository }}
-      
+     
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ghcr.io/${{ steps.repolower.outputs.lowercase }}:${{ github.sha }}, ghcr.io/${{ steps.repolower.outputs.lowercase }}:latest
+      
+      - name: Set image output
+        id: image-output
+        run: echo "image=ghcr.io/${{ steps.repolower.outputs.lowercase }}:${{ github.sha }}" >> $GITHUB_OUTPUT
 
   deploy-dev:
     runs-on: ubuntu-latest
@@ -54,19 +55,26 @@ jobs:
         run: |
           sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
           sudo chmod +x /usr/local/bin/yq
-
+      
       - name: Update image tag in Helm values
         run: |
           git config --global user.name "Deploy Bot"
           git config --global user.email "no-reply@noreply.com"
-
+          
+          # Clone the deployment repo
           git clone https://bot:${{ secrets.DEPLOY_PAT }}@github.com/${{ github.repository_owner }}/refactored-robot.git
-          cd refactored-robot/values
-
-          # Set image.tag to the GitHub SHA (built image tag)
-          yq e '.image.tag = "${{ github.sha }}"' -i values.common.yaml
-
-          git commit -a -m "chore(dev): deploy demo-app:${{ github.sha }}"
-          git notes append -m "image: ghcr.io/${{ github.repository_owner }}/demo-app:${{ github.sha }}"
+          cd refactored-robot
+          
+          # Update DEV environment values file (GitOps best practice)
+          yq e '.image.tag = "${{ github.sha }}"' -i values/envs/dev.yaml
+          
+          # Commit the changes
+          git add values/envs/dev.yaml
+          git commit -m "chore(dev): deploy ${{ needs.build-and-push-image.outputs.image }}"
+          
+          # Add Git Notes for promotion workflow (both image and env)
+          git notes add -m "image: ${{ needs.build-and-push-image.outputs.image }}" -m "env: dev" --force
+          
+          # Push everything
           git push origin "refs/notes/*" --force
-          git push --force
+          git push origin main
