fix:  Triggers on: Dockerfile changes, workflow changes

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'Dockerfile'           # Only trigger on Dockerfile changes
+      - '.github/workflows/**' # Or workflow changes
+      - '!*.md'                # Exclude all markdown files
 jobs:
   build-and-push-image:
     name: Build and Push Docker images
